2008-1-5 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  lib/rucola/initializer.rb,
	  lib/rucola/ruby_debug.rb:

	Added support for ruby-debug.
	If a call is made to Kernel.debugger and the RUBYCOCOA_ENV is `debug`,
	then the ruby-debug library will be required and ran.
	So to be able to use this you only need to install the ruby-debug gem.

2008-1-4 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/xcode.rb,
	  test/test_xcode.rb:

	Added to Xcode:
	#generate_object_id which generates a UUID for a new object.
	#add_framework which adds a framework to the xcode project.
	#frameworks which lists all the framework objects in the xcode project.

2008-1-4 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/initializer.rb:

	Require any ruby files in lib/.

2008-1-4 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/rucola_support/core_ext/objc/nsimage.rb,
	  test/test_helper.rb,
	  test/test_objc_core_ext.rb:

	NSImage#imageNamed will also look in app/assets for a given image name.

2008-1-4 Eloy Duran <e.duran@superalloy.nl>

	* app_generators/rucola/rucola_generator.rb,
	  test/test_rucola_generator.rb:

	Added the test/lib dir to the app generator.

2008-1-4 Eloy Duran <e.duran@superalloy.nl>

	* app_generators/rucola/rucola_generator.rb,
	  test/test_rucola_generator.rb:

	Added the app/assets/ and lib/ dirs to the app generator.

2008-1-4 Eloy Duran <e.duran@superalloy.nl>

	* History.txt,
	  lib/rucola/version.rb,
	  website/index.html:

	Changed files after 0.0.3 release

2007-11-29 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/info_plist.rb,
	  test/test_info_plist.rb:

	InfoPlist#app_name returns a ruby string instead of a NSString.

2007-11-29 Eloy Duran <e.duran@superalloy.nl>

	* app_generators/rucola/templates/app/controllers/application_controller.rb,
	  lib/rucola/info_plist.rb,
	  lib/rucola/version.rb,
	  lib/rucola/xcode.rb,
	  test/test_document_model_generator.rb:
